Table spacing fixes

--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ vscode-data-grid-row[row-type="header"] {
 .data-table td {
     white-space: nowrap;
     border: 1px solid var(--vscode-panel-border);
-    padding: 8px;
+    padding: 15px 8px;
     text-align: left;
 }
 
@@ -170,7 +170,7 @@ vscode-data-grid-row[row-type="header"] {
 } */
 
 .summary-button {
-    margin-top: 8px;
+    margin-top: 4px;
 }
 
 .data-table .date-header {
